@@ -196,6 +196,9 @@ BUGFIXES:
   ZOOKEEPER-2142: JMX ObjectName is incorrect for observers (Edward Ribeiro
   via michim)
 
+  ZOOKEEPER-1872: QuorumPeer is not shutdown in few cases
+  (Rakesh R. via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
